[gd_scene load_steps=4 format=2]

[ext_resource path="res://Models/Cake.tscn" type="PackedScene" id=1]
[ext_resource path="res://Models/Cake.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=16]

[node name="Cake" groups=["Cake"] instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="." index="8"]
wait_time = 1.2
one_shot = true
autostart = true

[node name="Area2" type="Area" parent="." index="9"]
collision_layer = 4
collision_mask = 4
monitoring = false

[node name="CollisionShape" type="CollisionShape" parent="Area2" index="0"]
shape = SubResource( 16 )

[node name="Area3" type="Area" parent="." index="10"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape" type="CollisionShape" parent="Area3" index="0"]
shape = SubResource( 16 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area3" to="." method="_on_Area3_body_entered"]
